# Factorio

./: CMakeLists.txt  consts.h  global.h  main.c
cli/inc/: cliinc.h  climain.h
cli/src/: climain.c
resources/inc/: rsccmd.h  rscglobal.h  rscinc.h  rscmain.h
resources/src/: rsccmd.c  rscmain.c
util/inc/: list.h
util/list/inc/: list.h  listinc.h
util/list/src/: listinc.c
util/src/: list.c
